# Book

./: README.md  pyproject.toml
app/: admin.py  apps.py  forms.py  models.py  views.py
app/migrations/: 0001_initial.py  0001_squashed_0010_alter_borrowingrecord_is_return.py  0002_alter_book_genre.py  0003_alter_book_published_date_and_more.py  0004_borrowingrecord_is_return.py  0005_book_picture.py  0006_book_admission_date.py  0007_alter_book_price.py  0008_reserverecord.py  0009_alter_reserverecord_reserve_date.py  0010_alter_borrowingrecord_is_return.py
app/templates/: book_create.html  book_delete.html  book_delete_generic.html  book_detail.html  book_lend_logs.html  book_list.html  book_new_recommend.html  book_update.html  borrower_detail.html  borrower_list.html  borrower_update.html  record_create.html  record_list_time_out.html  record_update.html  reserve_create.html  reserve_delete.html  reserve_detail.html  reserve_list.html  reserve_person_list.html  reserve_record_create.html  signup.html
core/: settings.py  urls.py
templates/: _navber.html  base.html
templates/registration/: login.html
